done with unit testing

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "unit test",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
